--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Shopping List</string>
-    <string name="shared_preferences">com.aleksitolvanen.shoppinglist.sharedpreferences</string>
+    <string name="shared_preferences">com.aleksiprograms.shoppinglist.sharedpreferences</string>
     <string name="intent_list">intentList</string>
     <string name="intent_new_list">intentNewList</string>
     <string name="title_lists">Shopping lists</string>
